cluster/data/_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: data
  labels:
    goldilocks.fairwinds.com/enabled: "true"
