cluster/data/postgres-backup.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbackups
  namespace: data
  labels:
    app.kubernetes.io/instance: pgbackups
    app.kubernetes.io/name: pgbackups
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: pgbackups
      app.kubernetes.io/name: pgbackups
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: pgbackups
        app.kubernetes.io/name: pgbackups
    spec:
      containers:
        - name: pgbackups
          image: prodrigestivill/postgres-backup-local:13
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nfs-backups
              mountPath: /backups
              subPath: postgresql
      volumes:
        - name: nfs-backups
          persistentVolumeClaim:
            claimName: nfs-backups
      dnsConfig:
        options:
          - name: ndots
            value: "1"
