cluster/data/archivebox.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivebox
  namespace: data
  annotations:
    fluxcd.io/ignore: "true"
spec:
  selector:
    matchLabels:
      app: archivebox
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archivebox
    spec:
      containers:
        - name: archivebox
          args: ["server"]
          image: archivebox/archivebox
          ports:
            - containerPort: 8000
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
          volumeMounts:
            - mountPath: /data
              name: archivebox
      restartPolicy: Always
      volumes:
        - name: archivebox
          persistentVolumeClaim:
            claimName: archivebox-config
---
apiVersion: v1
kind: Service
metadata:
  name: archivebox
  namespace: data
  annotations:
    fluxcd.io/ignore: "true"
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: archivebox
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    fluxcd.io/ignore: "true"
  labels:
    app.kubernetes.io/instance: archivebox
    app.kubernetes.io/name: archivebox
  name: archivebox
  namespace: data
spec:
  tls:
    - hosts:
        - archivebox.domain
  rules:
    - host: archivebox.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archivebox
                port:
                  number: 8000
